Добавляет навигацию в header

--- a/source/index.html
+++ b/source/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Интернет-магазин Cat Energy</title>
   </head>
-  <body>
+  <body class="page__body">
+
+    <header class="main-header">
+
+      <a class="header-logo">
+        <img class="main-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+      </a>
+
+      <nav class="main-nav main-nav--open main-nav--closed">
+
+        <button class="main-nav__toggle">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--current"><a href="#" aria-current="page">Главная</a></li>
+          <li class="main-nav__item"><a href="#">Каталог продукции</a></li>
+          <li class="main-nav__item"><a href="#">Подбор программ</a></li>
+        </ul>
+
+      </nav>
+
+    </header>
 
   </body>
 </html>
