Добавляет ссылку логотипу

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 
     <header class="main-header">
 
-      <a class="header-logo">
+      <a class="header-logo" href="index.html" aria-current="page">
         <img class="main-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
@@ -20,7 +20,7 @@
         </button>
 
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current"><a href="#" aria-current="page">Главная</a></li>
+          <li class="main-nav__item main-nav__item--current"><a href="index.html" aria-current="page">Главная</a></li>
           <li class="main-nav__item"><a href="#">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программ</a></li>
         </ul>
