Добавляет секцию promo

--- a/source/index.html
+++ b/source/index.html
@@ -29,5 +29,17 @@
 
     </header>
 
+    <main class="main-container">
+
+      <h1 class="main__title">Функциональное питание для котов</h1>
+
+      <section class="promo">
+        <h2 class="promo__slogan">Занялся собой? Займись котом!</h2>
+        <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов cat energy pro. С курицей. 500 грамм.">
+        <a class="promo__button button">Подобрать программу</a>
+      </section>
+
+    </main>
+
   </body>
 </html>
