--- a/source/index.html
+++ b/source/index.html
@@ -39,6 +39,28 @@
         <a class="promo__button button">Подобрать программу</a>
       </section>
 
+      <section class="program">
+
+        <ul class="program__list">
+
+            <li class="program__item">
+              <h2 class="program__item-title">Похудение</h2>
+              <p class="program__item-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="program__item-link" href="#">каталог slim</a>
+            </li>
+
+            <li class="program__item">
+              <h2 class="program__item-title">Набор массы</h2>
+              <p class="program__item-text">Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="program__item-link" href="#">каталог pro</a>
+            </li>
+
+        </ul>
+
+      </section>
+
     </main>
 
   </body>
