--- a/source/index.html
+++ b/source/index.html
@@ -61,6 +61,27 @@
 
       </section>
 
+      <section class="advantages">
+
+        <h2 class="advantages__title">Как это работает</h2>
+
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <p class="advantages__item-text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__item-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__item-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__item-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+
+      </section>
+
     </main>
 
   </body>
