--- a/source/index.html
+++ b/source/index.html
@@ -82,6 +82,32 @@
 
       </section>
 
+      <section class="sample">
+
+        <h2 class="sample__title">Живой пример</h2>
+
+        <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+          Отличный результат без изнуряющих тренировок!
+          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+
+        <dl class="sample__list">
+          <div class="simple__item">
+            <dt class="simple__number">5 кг</dt>
+            <dd class="simple__description">снижение веса</dd>
+          </div>
+        </dl>
+
+        <dl class="sample__list">
+          <div class="simple__item">
+            <dt class="simple__number">60 дней</dt>
+            <dd class="simple__description">затрачено времени</dd>
+          </div>
+        </dl>
+
+        <p class="sample__price-text">Затраты на питание: 15 000 &#8381;</p>
+
+      </section>
+
     </main>
 
   </body>
