--- a/source/index.html
+++ b/source/index.html
@@ -91,20 +91,33 @@
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
 
         <dl class="sample__list">
-          <div class="simple__item">
-            <dt class="simple__number">5 кг</dt>
-            <dd class="simple__description">снижение веса</dd>
+          <div class="sample__item">
+            <dt class="sample__number">5 кг</dt>
+            <dd class="sample__description">снижение веса</dd>
           </div>
         </dl>
 
         <dl class="sample__list">
-          <div class="simple__item">
-            <dt class="simple__number">60 дней</dt>
-            <dd class="simple__description">затрачено времени</dd>
+          <div class="sample__item">
+            <dt class="sample__number">60 дней</dt>
+            <dd class="sample__description">затрачено времени</dd>
           </div>
         </dl>
 
         <p class="sample__price-text">Затраты на питание: 15 000 &#8381;</p>
+
+          <div class="sample-slider-container slider">
+
+            <div class="slider__images">
+              <img class="sample-slider__before" src="img/sweet-pie.png" width="592" height="512" alt="Жирный, красивый, пушистый котик. Ну просто сладкий пирожочек. Его жизнь явно удалась.">
+              <img class="sample-slider__after" src="img/skinny-cat.png" width="592" height="512" alt="Тощий кот доходяга.">
+            </div>
+
+            <div class="slider__comparision">
+              <button class="slider__images-comparision-button">до после</button>
+            </div>
+
+          </div>
 
       </section>
 
