--- a/source/index.html
+++ b/source/index.html
@@ -66,16 +66,16 @@
         <h2 class="advantages__title">Как это работает</h2>
 
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--healthy">
             <p class="advantages__item-text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--fast">
             <p class="advantages__item-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--nutritious">
             <p class="advantages__item-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--effective">
             <p class="advantages__item-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
@@ -122,6 +122,8 @@
       </section>
 
     </main>
+    <footer class="">
 
+    </footer>
   </body>
 </html>
