Добавляет страницу формы

--- a/source/form.html
+++ b/source/form.html
@@ -29,99 +29,7 @@
 
     </header>
 
-    <main class="main-container">
-
-      <h1 class="main__title">Функциональное питание для котов</h1>
-
-      <section class="promo">
-        <h2 class="promo__slogan">Занялся собой? Займись котом!</h2>
-        <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов cat energy pro. С курицей. 500 грамм.">
-        <a class="promo__button button">Подобрать программу</a>
-      </section>
-
-      <section class="program">
-
-        <ul class="program__list">
-
-            <li class="program__item">
-              <h2 class="program__item-title">Похудение</h2>
-              <p class="program__item-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-                Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="program__item-link" href="#">каталог slim</a>
-            </li>
-
-            <li class="program__item">
-              <h2 class="program__item-title">Набор массы</h2>
-              <p class="program__item-text">Заработать авторитет среди дворовых котов и даже собак?
-                Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="program__item-link" href="#">каталог pro</a>
-            </li>
-
-        </ul>
-
-      </section>
-
-      <section class="advantages">
-
-        <h2 class="advantages__title">Как это работает</h2>
-
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--healthy">
-            <p class="advantages__item-text">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="advantages__item advantages__item--fast">
-            <p class="advantages__item-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="advantages__item advantages__item--nutritious">
-            <p class="advantages__item-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="advantages__item advantages__item--effective">
-            <p class="advantages__item-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-          </li>
-        </ul>
-
-      </section>
-
-      <section class="sample">
-
-        <h2 class="sample__title">Живой пример</h2>
-
-        <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-
-        <dl class="sample__list">
-          <div class="sample__item">
-            <dt class="sample__number">5 кг</dt>
-            <dd class="sample__description">снижение веса</dd>
-          </div>
-        </dl>
-
-        <dl class="sample__list">
-          <div class="sample__item">
-            <dt class="sample__number">60 дней</dt>
-            <dd class="sample__description">затрачено времени</dd>
-          </div>
-        </dl>
-
-        <p class="sample__price-text">Затраты на питание: 15 000 &#8381;</p>
-
-          <div class="sample-slider-container slider">
-
-            <div class="slider__images">
-              <img class="sample-slider__before" src="img/sweet-pie.png" width="592" height="512" alt="Жирный, красивый, пушистый котик. Ну просто сладкий пирожочек. Его жизнь явно удалась.">
-              <img class="sample-slider__after" src="img/skinny-cat.png" width="592" height="512" alt="Тощий кот доходяга.">
-            </div>
-
-            <div class="slider__comparision">
-              <button class="slider__images-comparision-button">до после</button>
-            </div>
-
-          </div>
-
-      </section>
-
-    </main>
+    <main class="main-container"></main>
 
     <footer class="main-footer">
 
