Добавляет страницу каталога

--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
 
         <ul class="main-nav__list">
           <li class="main-nav__item "><a href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a href="#">Каталог продукции</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item main-nav__item--current"><a href="form.html" aria-current="page">Подбор программ</a></li>
         </ul>
 
