Добавляет карточки товаров на страницу каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,6 +35,170 @@
 
         <h2 class="catalog__title">Каталог продукции</h2>
 
+        <ul class="catalog__list">
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Pro 500 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>500 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Курица</dd>
+                <dt>Цена</dt>
+                  <dd>700 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-chicken-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Pro 1000 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Курица</dd>
+                <dt>Цена</dt>
+                  <dd>1000 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Pro 500 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>500 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Рыба</dd>
+                <dt>Цена</dt>
+                  <dd>700 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Pro 1000 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Рыба</dd>
+                <dt>Цена</dt>
+                  <dd>1000 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy slim 500 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>500 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Гречка</dd>
+                <dt>Цена</dt>
+                  <dd>400 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Slim 1000 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Гречка</dd>
+                <dt>Цена</dt>
+                  <dd>700 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item product">
+            <a class="product__image-wrapper" href="#">
+              <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
+            </a>
+
+            <div class="catalog__wrapper">
+              <h3 class="product__title">
+                <a href="#">Cat Energy Slim 1000 г</a>
+              </h3>
+              <dl class="product__info">
+                <dt>Масса</dt>
+                  <dd>500 г</dd>
+                <dt>Вкус</dt>
+                  <dd>Гречка</dd>
+                <dt>Цена</dt>
+                  <dd>500 Р.</dd>
+              </dl>
+            </div>
+
+            <a class="product__button button" href="#">Заказать</a>
+          </li>
+
+          <li class="catalog__item">
+            <h3 class="product__description">Показать еще 100500 товаров</h3>
+            <p class="product__text">На самом деле вкусов гораздо больше!</p>
+            <a class="product__button button" href="#">Показать все</a>
+          </li>
+
+        </ul>
+
       </section>
 
     </main>
