Добавляет дополнительный товаров на страницу каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -201,6 +201,62 @@
 
       </section>
 
+      <section class="other">
+
+        <h2 class="other__title">Дополнительные товары</h2>
+
+        <ul class="other__list">
+
+          <li class="other__item">
+              <h3 class="other__item-title">Сахарозаменитель</h3>
+
+              <dl class="other__item-info">
+                  <dt>1 упаковка (100 г)</dt>
+                  <dd>200 р.</dd>
+              </dl>
+
+              <a class="other__item-button button" href="#">Заказать</a>
+          </li>
+
+          <li class="other__item">
+            <h3 class="other__item-title">Питьевая вода</h3>
+
+            <dl class="other__item-info">
+                <dt>5 литров</dt>
+                <dd>50 р.</dd>
+            </dl>
+
+            <a class="other__item-button button" href="#">Заказать</a>
+          </li>
+
+          <li class="other__item">
+            <h3 class="other__item-title">Молоко</h3>
+
+            <dl class="other__item-info">
+                <dt>1 литр</dt>
+                <dd>100 р.</dd>
+            </dl>
+
+            <a class="other__item-button button" href="#">Заказать</a>
+          </li>
+
+          <li class="other__item">
+            <h3 class="other__item-title">Витамины</h3>
+
+            <dl class="other__item-info">
+                <dt>1 упаковка (30 г)</dt>
+                <dd>300 р.</dd>
+            </dl>
+
+            <a class="other__item-button button" href="#">Заказать</a>
+          </li>
+        </ul>
+
+        <div class="other__action">
+          <p class="other__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
+        </div>
+      </section>
+
     </main>
 
     <footer class="main-footer">
