Исправляет ошибки просле проверки БЭМ дерво

--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,11 @@
   </head>
   <body class="page__body">
 
-    <header class="main-header">
+    <header class="page-header">
 
-      <a class="header__logo logo" href="index.html" aria-current="page">
-        <img class="main-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+      <a class="page-header__logo" href="index.html" aria-current="page">
+        <img class="page-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
 
       <nav class="main-nav main-nav--open main-nav--closed">
@@ -29,7 +29,7 @@
 
     </header>
 
-    <main class="main-container">
+    <main class="main">
 
       <h1 class="main__title">Функциональное питание для котов</h1>
 
@@ -106,15 +106,15 @@
 
         <p class="sample__price-text">Затраты на питание: 15 000 &#8381;</p>
 
-          <div class="sample-slider-container slider">
+          <div class="slider">
 
             <div class="slider__images">
-              <img class="sample-slider__before" src="img/sweet-pie.png" width="592" height="512" alt="Жирный, красивый, пушистый котик. Ну просто сладкий пирожочек. Его жизнь явно удалась.">
-              <img class="sample-slider__after" src="img/skinny-cat.png" width="592" height="512" alt="Тощий кот доходяга.">
+              <img class="slider__before" src="img/sweet-pie.png" width="592" height="512" alt="Жирный, красивый, пушистый котик. Ну просто сладкий пирожочек. Его жизнь явно удалась.">
+              <img class="slider__after" src="img/skinny-cat.png" width="592" height="512" alt="Тощий кот доходяга.">
             </div>
 
-            <div class="slider__comparision">
-              <button class="slider__images-comparision-button">до после</button>
+            <div class="slider__compare">
+              <button class="slider__images-compare">до после</button>
             </div>
 
           </div>
@@ -123,12 +123,12 @@
 
     </main>
 
-    <footer class="main-footer">
+    <footer class="footer">
 
-      <div class="addres__container">
+      <div class="footer__addres-container">
 
-        <p class="addres__text">приглашаем к сотрудничеству дилеров!</p>
-        <address>ул. Большая конюшенная, д. 19/8 Санкт-Петербург</address>
+        <p class="footer__invite-text">приглашаем к сотрудничеству дилеров!</p>
+        <p class="footer__addres-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
 
       </div>
 
@@ -144,8 +144,8 @@
 
       <div class="footer__link-container">
 
-        <a class="footer__logo logo" href="index.html" aria-current="page">
-          <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+        <a class="footer__logo" href="index.html" aria-current="page">
+          <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
         </a>
 
         <div class="social-wrapper">
