--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,11 +6,11 @@
   </head>
   <body class="page__body">
 
-    <header class="main-header">
+    <header class="page-header">
 
-      <a class="header__logo logo" href="index.html">
-        <img class="main-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+      <a class="page-header__logo" href="index.html">
+        <img class="page-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
 
       <nav class="main-nav main-nav--open main-nav--closed">
@@ -192,9 +192,9 @@
           </li>
 
           <li class="catalog__item">
-            <h3 class="product__description">Показать еще 100500 товаров</h3>
-            <p class="product__text">На самом деле вкусов гораздо больше!</p>
-            <a class="product__button button" href="#">Показать все</a>
+            <h3 class="catalog__product-description">Показать еще 100500 товаров</h3>
+            <p class="catalog__product-text">На самом деле вкусов гораздо больше!</p>
+            <a class="catalog__product-button button" href="#">Показать все</a>
           </li>
 
         </ul>
@@ -259,14 +259,15 @@
 
     </main>
 
-    <footer class="main-footer">
+    <footer class="footer">
 
-      <div class="addres__container">
+      <div class="footer__addres-container">
 
-        <p class="addres__text">приглашаем к сотрудничеству дилеров!</p>
-        <address>ул. Большая конюшенная, д. 19/8 Санкт-Петербург</address>
+        <p class="footer__invite-text">приглашаем к сотрудничеству дилеров!</p>
+        <p class="footer__addres-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
 
       </div>
+
 
       <div class="map" style="position:relative;overflow:hidden;">
 
