--- a/source/form.html
+++ b/source/form.html
@@ -6,11 +6,11 @@
   </head>
   <body class="page__body">
 
-    <header class="main-header">
+    <header class="page-header">
 
-      <a class="header__logo logo" href="index.html">
-        <img class="main-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo-title" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+      <a class="page-header__logo" href="index.html">
+        <img class="page-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
 
       <nav class="main-nav main-nav--open main-nav--closed">
@@ -29,7 +29,9 @@
 
     </header>
 
-    <main class="main-container">
+    <main class="main">
+
+      <h1 class="visually-hidden">Форма для подбора программы питания</h1>
 
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
 
@@ -155,18 +157,18 @@
 
         <button class="form__button button" type="submit">Отправить заявку</button>
 
-        <p class="form-submit__note"><sup>*</sup> — Обязательные поля</p>
+        <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
 
       </form>
 
     </main>
 
-    <footer class="main-footer">
+    <footer class="footer">
 
-      <div class="addres__container">
+      <div class="footer__addres-container">
 
-        <p class="addres__text">приглашаем к сотрудничеству дилеров!</p>
-        <address>ул. Большая конюшенная, д. 19/8 Санкт-Петербург</address>
+        <p class="footer__invite-text">приглашаем к сотрудничеству дилеров!</p>
+        <p class="footer__addres-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
 
       </div>
 
