--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,9 +8,9 @@
 
     <header class="page-header">
 
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/icon-super-cat.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
+      <a class="page-header__logo logo" href="index.html" aria-current="page">
+        <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
 
       <nav class="main-nav main-nav--open main-nav--closed">
