--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
         </button>
 
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current"><a href="index.html" aria-current="page">Главная</a></li>
+          <li class="main-nav__item"><a href="index.html" aria-current="page">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="form.html">Подбор программ</a></li>
         </ul>
