--- a/source/index.html
+++ b/source/index.html
@@ -7,64 +7,49 @@
   <body class="page__body">
 
     <header class="page-header">
-
       <a class="page-header__logo logo" href="index.html" aria-current="page">
         <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип catenergy">
       </a>
-
-      <nav class="main-nav main-nav--open main-nav--closed">
-
-        <button class="main-nav__toggle">
+      <nav class="main-nav main-nav__is-close"> <!-- Убрал модификаторы и добавил элемент. main-nav__is-close базовое состояние -->
+        <button class="btn-burger"> <!-- Изменил класс -->
           <span class="visually-hidden">Открыть меню</span>
+          <span class="visually-hidden">Закрыть меню</span> <!-- Добавил состояние которое будет при открытом меню -->
         </button>
-
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="index.html" aria-current="page">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="form.html">Подбор программ</a></li>
         </ul>
-
       </nav>
-
     </header>
 
     <main class="main">
-
       <h1 class="main__title">Функциональное питание для котов</h1>
-
       <section class="promo">
         <h2 class="promo__slogan">Занялся собой? Займись котом!</h2>
         <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов cat energy pro. С курицей. 500 грамм.">
-        <a class="promo__button button">Подобрать программу</a>
+        <a class="promo__button button" href="form.html">Подобрать программу</a>
       </section>
-
       <section class="program">
-
         <ul class="program__list">
-
             <li class="program__item">
               <h2 class="program__item-title">Похудение</h2>
               <p class="program__item-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                 Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="program__item-link" href="#">каталог slim</a>
             </li>
-
             <li class="program__item">
               <h2 class="program__item-title">Набор массы</h2>
               <p class="program__item-text">Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="program__item-link" href="#">каталог pro</a>
             </li>
-
         </ul>
-
       </section>
 
       <section class="advantages">
-
         <h2 class="advantages__title">Как это работает</h2>
-
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--healthy">
             <p class="advantages__item-text">Функциональное питание содержит только полезные питательные вещества.</p>
@@ -79,81 +64,54 @@
             <p class="advantages__item-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
-
       </section>
-
       <section class="sample">
-
         <h2 class="sample__title">Живой пример</h2>
-
         <p class="sample__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
           Отличный результат без изнуряющих тренировок!
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-
         <dl class="sample__list">
           <div class="sample__item">
             <dt class="sample__number">5 кг</dt>
             <dd class="sample__description">снижение веса</dd>
           </div>
         </dl>
-
         <dl class="sample__list">
           <div class="sample__item">
             <dt class="sample__number">60 дней</dt>
             <dd class="sample__description">затрачено времени</dd>
           </div>
         </dl>
-
         <p class="sample__price-text">Затраты на питание: 15 000 &#8381;</p>
-
           <div class="slider">
-
             <div class="slider__images">
               <img class="slider__before" src="img/sweet-pie.png" width="592" height="512" alt="Жирный, красивый, пушистый котик. Ну просто сладкий пирожочек. Его жизнь явно удалась.">
               <img class="slider__after" src="img/skinny-cat.png" width="592" height="512" alt="Тощий кот доходяга.">
             </div>
-
             <div class="slider__compare">
               <button class="slider__images-compare">до после</button>
             </div>
-
           </div>
-
       </section>
-
     </main>
-
     <footer class="footer">
-
       <div class="footer__addres-container">
-
         <p class="footer__invite-text">приглашаем к сотрудничеству дилеров!</p>
         <p class="footer__addres-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
-
       </div>
-
       <div class="map" style="position:relative;overflow:hidden;">
-
         <h2 class="visually-hidden">Адрес на Яндекс картах</h2>
-
         <a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a>
         <a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323037%2C59.938631&utm_medium=mapframe&utm_source=maps&z=16" style="color:#eee;font-size:12px;position:absolute;top:14px;">Большая Конюшенная улица, 19/8 на карте Санкт‑Петербурга, ближайшее метро Гостиный двор — Яндекс Карты</a>
         <iframe src="https://yandex.ru/map-widget/v1/?ll=30.323037%2C59.938631&mode=whatshere&whatshere%5Bpoint%5D=30.323037%2C59.938631&whatshere%5Bzoom%5D=17&z=16" width="560" height="400" style="position:relative;"></iframe>
-
       </div>
-
       <div class="footer__link-container">
-
         <a class="footer__logo" href="index.html" aria-current="page">
           <img class="logo" src="img/logo-catenergy.svg" width="101" height="18" alt="Логотип catenergy">
         </a>
-
         <div class="social-wrapper">
-
           <h2 class="visually-hidden">Мы в социальных сетях</h2>
-
             <ul class="social-list">
-
               <li class="social-ltem">
                 <a class="social-link social-link-vk" href="https://vk.com/htmlacademy">
                   <svg width="27" height="17" viewBox="0 0 27 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -161,7 +119,6 @@
                   </svg>
                 </a>
               </li>
-
               <li class="social-ltem">
                 <a class="social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
                   <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -169,7 +126,6 @@
                   </svg>
                 </a>
               </li>
-
               <li class="social-ltem">
                 <a class="social-link social-link-tg" href="https://t.me/htmlacademy" aria-label="Наш канал в Telegram">
                   <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -177,26 +133,19 @@
                   </svg>
                 </a>
               </li>
-
             </ul>
-
         </div>
       </div>
-
       <div class="dev-container">
-
         <a class="footer__dev-link" href="#">
           <p class="footer__dev-name">HTML Acadevy</p>
         </a>
-
         <a class="footer__dev-link" href="#">
           <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
             </svg>
         </a>
-
       </div>
-
     </footer>
   </body>
 </html>
