Добавляет изменения просле проверки валидатороми БЭМ генератором

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
       <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип catenergy">
     </a>
-    <nav class="main-nav main-nav__is-close">
+    <nav class="main-nav main-nav--is-close">
       <button class="btn-burger">
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
@@ -173,8 +173,8 @@
     <section class="catalog catalog--other">
       <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
 
-      <ul class="catalog__list catalog__list--other">
-        <li class="catalog__item--other">
+      <ul class="catalog__list catalog__list-other">
+        <li class="catalog__item product">
           <h2 class="product__title product__title--other">Сахарозаменитель</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (100&#160;г)</dt>
@@ -183,7 +183,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item--other">
+        <li class="catalog__item product">
           <h2 class="product__title product__title--other">Питьевая вода</h2>
           <dl class="product__info product__info--other">
             <dt>5 литров</dt>
@@ -192,7 +192,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item--other">
+        <li class="catalog__item product">
           <h2 class="product__title product__title--other">Молоко</h2>
           <dl class="product__info product__info--other">
             <dt>1 литр</dt>
@@ -201,7 +201,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item--other">
+        <li class="catalog__item product">
           <h2 class="product__title product__title--other">Витамины</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (30&#160;г)</dt>
@@ -256,9 +256,9 @@
           </li>
         </ul>
       </section>
-      <a class="dev__link" href="#">
+      <a class="dev" href="#">
         <p class="dev__name">HTML Academy</p>
-        <svg>Тут будет спрайт академии</svg>
+          <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
