--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
       <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип catenergy">
     </a>
-    <nav class="main-nav main-nav__is-close">
+    <nav class="main-nav main-nav--is-close">
       <button class="btn-burger">
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
@@ -73,12 +73,10 @@
           <li class="form__module-item">
             <label class="form__field-label" for="e-mail">E-mail:*</label>
             <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
-            <svg>Тут будет спрайт конверта</svg>
           </li>
           <li class="form__module-item">
             <label class="form__field-label" for="telephone">Телефон:*</label>
             <input class="form__field-input" type="tel" name="telephone" id="telephone" placeholder="8 (960) 900-60-90" required>
-            <svg>Тут будет спрайт телефонной трубки</svg>
           </li>
         </ul>
       </fieldset>
@@ -155,9 +153,9 @@
           </li>
         </ul>
       </section>
-      <a class="dev__link" href="#">
+      <a class="dev" href="#">
         <p class="dev__name">HTML Academy</p>
-        <svg>Тут будет спрайт академии</svg>
+          <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
