--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
       <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav__is-close"> <!-- Убрал модификаторы и добавил элемент. main-nav__is-close базовое состояние -->
+    <nav class="main-nav main-nav--is-close"> <!-- Убрал модификаторы и добавил элемент. main-nav__is-close базовое состояние -->
       <button class="btn-burger"> <!-- Изменил класс -->
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span> <!-- Добавил состояние которое будет при открытом меню -->
@@ -141,9 +141,9 @@
         </ul>
       </section> <!-- Убрал svg-шки. вставил span class="visually-hidden" их не было потому что в Sedone я вставлял svg а в них писал area-label.
       Про спрайты помню. Читал на первом курсе. Где то в тренажёрах было в ознакомитльных целях. -->
-      <a class="dev__link" href="#">
-        <p class="dev__name">HTML Academy</p> <!-- Исправил ошибку в слове, убрал лишнюю ссылку да ты права, это будет одна ссылка. -->
-        <svg>Тут будет спрайт академии</svg>
+      <a class="dev" href="#">
+        <p class="dev__name">HTML Academy</p>
+          <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
