Подключает стили к остальным страницам

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
   <title>Интернет-магазин Cat Energy</title>
 </head>
 
@@ -155,7 +156,7 @@
       </section>
       <a class="dev" href="#">
         <p class="dev__name">HTML Academy</p>
-          <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
