Начал выполнять задание по стилизации

--- a/source/index.html
+++ b/source/index.html
@@ -36,11 +36,11 @@
       <a class="promo__button button" href="form.html">Подобрать программу</a>
     </section>
 
-    <section class="program"> <!-- То что нужно было написал с большой буквы -->
-      <h2 class="visually-hidden">Выбор программы питания</h2> <!-- Добавил скрытый заголовок -->
+    <section class="program">
+      <h2 class="visually-hidden">Выбор программы питания</h2>
       <ul class="program__list">
         <li class="program__item program__item--slim">
-          <h2 class="program__title">Похудение</h2> <!-- Открутил все элементы от слова item-->
+          <h2 class="program__title">Похудение</h2>
           <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="program__link" href="#">Каталог Slim</a>
@@ -57,7 +57,7 @@
     <section class="advantages">
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
-        <li class="advantages__item advantages__item--healthy"> <!-- Открутил все элементы от слова item-->
+        <li class="advantages__item advantages__item--healthy">
           <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="advantages__item advantages__item--fast">
